--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>FitPro - Tu Gimnasio de Confianza</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    crossorigin="anonymous" referrerpolicy="no-referrer" integrity="" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
@@ -310,8 +309,6 @@
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/footer.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" crossorigin="anonymous"
-    referrerpolicy="no-referrer"></script>
   <script src="js/darkmode.js"></script>
   <script src="js/index.js"></script>
   
