Página de Blog y correcciones

--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -76,7 +76,7 @@
     </nav>
   </header>
 
-  <main class="pricing-page container py-5">
+  <main class="pricing-page container py-10">
     <section class="pricing-header mb-4 text-center">
       <h1>Elige tu Plan Perfecto</h1>
       <div class="btn-group btn-group-toggle pricing-toggle mt-3 " data-bs-toggle="buttons">
@@ -103,15 +103,15 @@
               <th>Precio</th>
               <td>
                 <span class="monthly-price">$29.99/mes</span>
-                <span class="annual-price">$299.99/año</span>
+                <span class="annual-price d-none">$299.99/año</span>
               </td>
               <td>
                 <span class="monthly-price">$59.99/mes</span>
-                <span class="annual-price">$599.99/año</span>
+                <span class="annual-price d-none">$599.99/año</span>
               </td>
               <td>
                 <span class="monthly-price">$79.99/mes</span>
-                <span class="annual-price ">$799.99/año</span>
+                <span class="annual-price d-none">$799.99/año</span>
               </td>
             </tr>
             <tr>
