--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -79,7 +79,7 @@
 
     <main class="trainers-page">
       <section class="trainers-section container-fluid">
-        <h1 class="section-title text-center display-4 display-md-3 display-lg-1 fs-1 pb-4">NUESTROS ENTRENADORES</h1>
+        <h1 class="section-title text-center display-4 display-md-3 display-lg-1 fs-1 py-4">NUESTROS ENTRENADORES</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4justify-content-center">
           <div class="col py-3">
             <div class="trainer-card" tabindex="0">
